# tiebreak

./: .gitignore  LICENSE.md  main.py  pyproject.toml
data/: Bundesturnier2024Hauptturnier1.xlsx  candidate2024.csv  wiki_sonnebornberger.csv
other/: collect.py  read_csv.py
scripts/: nnsb.py  swiss.py  tb.py
tests/: conftest.py  test_stats.py
tests/policy/: test_neustadtl.py
tests/tietypes/: test_data.py  test_outcome.py  test_result.py
tiebreak/: __init__.py  data.py  points.py  policies.py  stats.py  tiebreaker.py  tietypes.py
tiebreaker/: __init__.py  data.py  points.py  policies.py  stats.py  tiebreak.py
