[project]
name = "tiebreaker"
version = "0.1.2"
description = "Tiebreak package for sport, games and competition"
authors = [
    {name = "Bucher David", email = "davidbucherdev@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
    'Topic :: Games/Entertainment',
    'Topic :: Games/Entertainment :: Simulation',
    'Typing :: Typed',
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pandas>=3.0.2",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
